--- a/_quarto.yml
+++ b/_quarto.yml
@@ -21,3 +21,4 @@ website:
       - href: session1_intro_to_mathematical_modelling/session1_intro_to_mathematical_modelling.qmd
       - href: session2_differential_equations_in_r/session2_differential_equations_in_r.qmd
       - href: session3_writing_a_model_to_suit_the_infectious_agent/session3_writing_a_model_to_suit_the_infectious_agent.qmd
+      - href: session7_vector_borne_modelling/session7_vector_borne_modelling.qmd
