--- a/_quarto.yml
+++ b/_quarto.yml
@@ -22,3 +22,5 @@ website:
       - href: session2_differential_equations_in_r/session2_differential_equations_in_r.qmd
       - href: session3_writing_a_model_to_suit_the_infectious_agent/session3_writing_a_model_to_suit_the_infectious_agent.qmd
       - href: session7_vector_borne_modelling/session7_vector_borne_modelling.qmd
+      - href: session8_vector_borne_modelling_in_r/session8_vector_borne_modelling_in_r.qmd
+      
