--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,7 +2,7 @@ project:
   title: "Modelling Infectious Diseases"
   output-dir: student_materials
   type: website
-  resources: ['session1_introduction_beans.R', 'session8_vector_model.R']
+  resources: ['session1_introduction_beans.R', 'session8_vector_model.R', 'shiny_app_SEIRS_variations.R']
 toc: true
 format:
   html:
