--- a/_quarto.yml
+++ b/_quarto.yml
@@ -6,6 +6,7 @@ project:
 toc: true
 format:
   html:
+    theme: cosmo
     css: style.css
     title-block-style: none
     embed-resources: true
@@ -20,6 +21,11 @@ execute:
 
 website:
   sidebar:
+    title: "Modelling Infectious Diseases"
+    style: floating
+    search: true
+    logo: logo.png
+    border: true
     contents:
       - href: session1_intro_to_mathematical_modelling/session1_intro_to_mathematical_modelling.qmd
       - href: session2_differential_equations_in_r/session2_differential_equations_in_r.qmd
@@ -29,4 +35,12 @@ website:
       - href: session7_vector_borne_modelling/session7_vector_borne_modelling.qmd
       - href: session8_vector_borne_modelling_in_r/session8_vector_borne_modelling_in_r.qmd
       - href: session9_modelling_interventions_in_r/session9_modelling_interventions_in_r.qmd
+  page-footer:
+    left: |
+      For more information or to report issues, please contact <a href='mailto:spectrum-spark@unimelb.edu.au'>the consortia project inbox</a>. <br>
+      © July 2025 SPARKLE
+    right: |
+      SPARKLE is funded by the Australian Department of Foreign Affairs and Trade (DFAT)
+    background: "#4BA5AB"
+    foreground: "#FFFFFF"
       
