--- a/_quarto.yml
+++ b/_quarto.yml
@@ -35,12 +35,12 @@ website:
       - href: session7_vector_borne_modelling/session7_vector_borne_modelling.qmd
       - href: session8_vector_borne_modelling_in_r/session8_vector_borne_modelling_in_r.qmd
       - href: session9_modelling_interventions_in_r/session9_modelling_interventions_in_r.qmd
-  # page-footer:
-  #   left: |
-  #     For more information or to report issues, please contact <a href='mailto:spectrum-spark@unimelb.edu.au'>the consortia project inbox</a>. <br>
-  #     © July 2025 SPARKLE
-  #   right: |
-  #     SPARKLE is funded by the Australian Department of Foreign Affairs and Trade (DFAT)
-  #   background: "#4BA5AB"
-  #   foreground: "#FFFFFF"
+  page-footer:
+    left: |
+      For more information or to report issues, please contact <a href='mailto:spectrum-spark@unimelb.edu.au'>the consortia project inbox</a>. <br>
+      © July 2025 SPARKLE
+    right: |
+      SPARKLE is funded by the Australian Department of Foreign Affairs and Trade (DFAT)
+    background: "#4BA5AB"
+    foreground: "#FFFFFF"
       
