--- a/.github/workflows/copy-to-training-site.yml
+++ b/.github/workflows/copy-to-training-site.yml
@@ -15,6 +15,8 @@ jobs:
         with:
           personal_token: ${{ secrets.PERSONAL_TOKEN }}
           src_path: /docs
+          src_branch: main
           dst_path: /InfectiousDiseasesCourse/
+          dst_branch: main
           dst_owner: spectrum-spark
-          dst_repo_name: trianing
+          dst_repo_name: training
