Fix destination repo name

--- a/.github/workflows/copy-to-training-site.yml
+++ b/.github/workflows/copy-to-training-site.yml
@@ -19,4 +19,4 @@ jobs:
           dst_path: /InfectiousDiseasesCourse/
           dst_branch: main
           dst_owner: spectrum-spark
-          dst_repo_name: training
+          dst_repo_name: courses
