add in repository to check out

--- a/.github/workflows/copy-to-training-site.yml
+++ b/.github/workflows/copy-to-training-site.yml
@@ -13,6 +13,7 @@ jobs:
       - name: Checkout source repo
         uses: actions/checkout@v4
         with:
+          repository: ${{ github.repository }}
           path: source
 
       - name: Checkout target repo
